--- a/app/src/main/res/layout/fragment_confirm_order_list.xml
+++ b/app/src/main/res/layout/fragment_confirm_order_list.xml
@@ -74,7 +74,7 @@
             app:layout_constraintVertical_bias="0.832" />
 
         <ImageButton
-            android:id="@+id/paymentButton"
+            android:id="@+id/confirmProfileButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackgroundBorderless"
