--- a/app/src/main/res/layout/fragment_item_info.xml
+++ b/app/src/main/res/layout/fragment_item_info.xml
@@ -264,23 +264,10 @@
                             app:layout_constraintVertical_bias="0.571"></TextView>
 
                         <ImageButton
-                            android:id="@+id/buybutton"
-                            android:layout_width="200dp"
-                            android:layout_height="59dp"
-                            android:background="?attr/selectableItemBackgroundBorderless"
-                            android:contentDescription="@string/app_name"
-                            android:src="@drawable/buttonbuy"
-                            android:visibility="invisible"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/itemDetail"
-                            app:layout_constraintVertical_bias="0.626" />
-
-                        <ImageButton
                             android:id="@+id/buybutton2"
                             android:layout_width="200dp"
                             android:layout_height="59dp"
+                            android:layout_marginBottom="72dp"
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="@string/app_name"
                             android:src="@drawable/buttoncart"
@@ -288,8 +275,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/buybutton"
-                            app:layout_constraintVertical_bias="0.578" />
+                            app:layout_constraintTop_toBottomOf="@+id/inputamountitem" />
 
                         <EditText
                             android:id="@+id/inputamountitem"
