--- a/app/src/main/res/layout/static_rv_manageorderlist.xml
+++ b/app/src/main/res/layout/static_rv_manageorderlist.xml
@@ -4,12 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="140dp">
+    android:layout_height="170dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardviewlist"
         android:layout_width="350dp"
-        android:layout_height="100dp"
+        android:layout_height="130dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
@@ -28,46 +28,44 @@
             <ImageView
                 android:id="@+id/imageItem"
                 android:layout_width="80dp"
-                android:layout_height="69dp"
+                android:layout_height="80dp"
                 android:layout_gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="0.041"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0"
+                app:layout_constraintVertical_bias="0.483"
                 app:srcCompat="@drawable/ic_launcher_foreground" />
 
             <TextView
                 android:id="@+id/myorderitemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/kanit"
                 android:layout_marginLeft="10dp"
+                android:fontFamily="@font/kanit"
                 android:gravity="left"
-                android:text="ชื่ออาหาร"
-                android:textSize="17dp"
+                android:text="orderID:"
+                android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.045"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/imageItem"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="0.202" />
 
             <TextView
                 android:id="@+id/textAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kanit"
-                android:text="จำนวน 1 ชิ้น"
                 android:gravity="left"
-                android:textSize="13dp"
+                android:text="จำนวน 1 ชิ้น"
+                android:textSize="15dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/myorderitemName"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/myorderitemName"
-                app:layout_constraintTop_toBottomOf="@+id/myorderitemName"
-                app:layout_constraintVertical_bias="0.058" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.962" />
 
             <TextView
                 android:id="@+id/textPrice"
@@ -82,7 +80,22 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/myorderitemName"
                 app:layout_constraintTop_toBottomOf="@+id/myorderitemName"
-                app:layout_constraintVertical_bias="0.777" />
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/textState"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/kanit"
+                android:gravity="left"
+                android:text="สภานะ: กำลังดำเนินการ"
+                android:textSize="13dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/myorderitemName"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/myorderitemName"
+                app:layout_constraintTop_toBottomOf="@+id/myorderitemName"
+                app:layout_constraintVertical_bias="0.38" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
