--- a/app/src/main/res/layout/fragment_item_info.xml
+++ b/app/src/main/res/layout/fragment_item_info.xml
@@ -46,7 +46,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
-                    android:id="@+id/itemInfoImage2"
+                    android:id="@+id/stroageItemImg"
                     android:layout_width="250dp"
                     android:layout_height="250dp"
                     android:foregroundGravity="center"
@@ -73,7 +73,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/itemInfoImage2"
+                    app:layout_constraintTop_toBottomOf="@+id/stroageItemImg"
                     app:layout_constraintVertical_bias="0.031">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
@@ -275,10 +275,10 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/inputamountitem" />
+                            app:layout_constraintTop_toBottomOf="@+id/storageItemName" />
 
                         <EditText
-                            android:id="@+id/inputamountitem"
+                            android:id="@+id/storageItemName"
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="180dp"
