--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -61,7 +61,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
         <EditText
-            android:id="@+id/inputamountitem"
+            android:id="@+id/storageItemName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/custom_input"
@@ -97,10 +97,10 @@
             android:inputType="textPassword"
             android:minHeight="50dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/inputamountitem"
+            app:layout_constraintEnd_toEndOf="@+id/storageItemName"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/inputamountitem"
-            app:layout_constraintTop_toBottomOf="@+id/inputamountitem"
+            app:layout_constraintStart_toStartOf="@+id/storageItemName"
+            app:layout_constraintTop_toBottomOf="@+id/storageItemName"
             app:layout_constraintVertical_bias="0.075" />
 
         <ImageButton
