--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -64,7 +64,7 @@
 
 
         <EditText
-            android:id="@+id/inputamountitem"
+            android:id="@+id/storageItemName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/custom_input"
@@ -100,10 +100,10 @@
             android:paddingEnd="15dp"
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/inputamountitem"
+            app:layout_constraintEnd_toEndOf="@+id/storageItemName"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/inputamountitem"
-            app:layout_constraintTop_toBottomOf="@+id/inputamountitem"
+            app:layout_constraintStart_toStartOf="@+id/storageItemName"
+            app:layout_constraintTop_toBottomOf="@+id/storageItemName"
             app:layout_constraintVertical_bias="0.073" />
 
         <EditText
