--- a/app/src/main/res/layout/static_rv_listitem.xml
+++ b/app/src/main/res/layout/static_rv_listitem.xml
@@ -38,7 +38,7 @@
                 app:srcCompat="@drawable/ic_launcher_foreground" />
 
             <TextView
-                android:id="@+id/textName"
+                android:id="@+id/myorderitemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
@@ -60,10 +60,10 @@
                 android:text="100 บาท / 3.0 KG"
                 android:textAlignment="center"
                 android:textSize="17dp"
-                app:layout_constraintEnd_toEndOf="@+id/textName"
+                app:layout_constraintEnd_toEndOf="@+id/myorderitemName"
                 app:layout_constraintHorizontal_bias="0.516"
-                app:layout_constraintStart_toStartOf="@+id/textName"
-                app:layout_constraintTop_toBottomOf="@+id/textName" />
+                app:layout_constraintStart_toStartOf="@+id/myorderitemName"
+                app:layout_constraintTop_toBottomOf="@+id/myorderitemName" />
 
             <ImageView
                 android:id="@+id/star1"
