--- a/app/src/main/res/layout/static_rv_myorderinfolist.xml
+++ b/app/src/main/res/layout/static_rv_myorderinfolist.xml
@@ -4,14 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="350dp">
+    android:layout_height="140dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardviewlist"
-        android:layout_width="180dp"
-        android:layout_height="330dp"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:background="@color/white"
         app:cardCornerRadius="20dp"
@@ -23,61 +23,68 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/imageItem"
-                android:layout_width="150dp"
-                android:layout_height="160dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.041"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
+                app:layout_constraintVertical_bias="0.516"
                 app:srcCompat="@drawable/ic_launcher_foreground" />
 
             <TextView
                 android:id="@+id/myorderitemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginLeft="10dp"
                 android:fontFamily="@font/kanit"
-                android:text="อาหารแมว"
-                android:textAlignment="center"
-                android:textSize="18dp"
+                android:gravity="left"
+                android:text="ชื่อไอเท็ม"
+                android:textSize="17dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageItem" />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/imageItem"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.043" />
 
             <TextView
-                android:id="@+id/textAmount"
+                android:id="@+id/totalprice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginLeft="10dp"
                 android:fontFamily="@font/kanit"
-                android:gravity="center"
-                android:text="100 บาท / 3.0 KG"
-                android:textAlignment="center"
-                android:textSize="17dp"
-                app:layout_constraintEnd_toEndOf="@+id/myorderitemName"
-                app:layout_constraintHorizontal_bias="0.516"
-                app:layout_constraintStart_toStartOf="@+id/myorderitemName"
-                app:layout_constraintTop_toBottomOf="@+id/myorderitemName" />
+                android:gravity="left"
+                android:text="ราคารวม"
+                android:textSize="15dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/imageItem"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.51" />
 
             <TextView
-                android:id="@+id/textTotalPrice"
+                android:id="@+id/countitem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginLeft="10dp"
                 android:fontFamily="@font/kanit"
-                android:gravity="center"
-                android:text="100 บาท / 3.0 KG"
-                android:textAlignment="center"
+                android:gravity="left"
+                android:text="3 items"
                 android:textSize="17dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textAmount" />
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/imageItem"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
