--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -65,4 +65,34 @@
         android:name="th.ac.kmutnb.foodpetshop.EditProfileFragment"
         android:label="fragment_edit_profile"
         tools:layout="@layout/fragment_edit_profile" />
+    <fragment
+        android:id="@+id/adminFragment"
+        android:name="th.ac.kmutnb.foodpetshop.AdminControlFragment"
+        android:label="fragment_admin_control"
+        tools:layout="@layout/fragment_admin_control" />
+    <fragment
+        android:id="@+id/manageOrderFragment"
+        android:name="th.ac.kmutnb.foodpetshop.ManageOrderFragment"
+        android:label="fragment_manage_order"
+        tools:layout="@layout/fragment_manage_order" />
+    <fragment
+        android:id="@+id/manageStorageItemFragment"
+        android:name="th.ac.kmutnb.foodpetshop.ManageStorageItemFragment"
+        android:label="fragment_manage_storage_item"
+        tools:layout="@layout/fragment_manage_storage_item" />
+    <fragment
+        android:id="@+id/myOrderInfoFragment"
+        android:name="th.ac.kmutnb.foodpetshop.MyOrderInfoFragment"
+        android:label="fragment_my_order_info"
+        tools:layout="@layout/fragment_my_order_info" />
+    <fragment
+        android:id="@+id/manageOrderInfoFragment"
+        android:name="th.ac.kmutnb.foodpetshop.ManageOrderInfoFragment"
+        android:label="fragment_manage_order_info"
+        tools:layout="@layout/fragment_manage_order_info" />
+    <fragment
+        android:id="@+id/addItemFragment"
+        android:name="th.ac.kmutnb.foodpetshop.AddItemFragment"
+        android:label="fragment_add_item"
+        tools:layout="@layout/fragment_add_item" />
 </navigation>
